# bare-metal-manager-core

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report_form.yml  config.yml  documentation-request.md  documentation_request_correction.yml  documentation_request_new.yml  feature_request.md  feature_request_form.yml  submit-question.md
book/: book.toml
book/src/: README.md  SUMMARY.md  glossary.md
book/src/architecture/: state_handling.md
book/src/playbooks/: ib_runbook.md
crates/admin-cli/src/: main.rs  metadata.rs
crates/agent/src/: periodic_config_fetcher.rs
crates/api/: Cargo.toml
crates/api-db/migrations/: 20260121120000_state_controller_processed_by.sql  20260122093707_dpf_state_expected_machine.sql  20260123174316_ib_partitions_add_labels_and_description.sql  20260127040030_network_vpc_prefixes_add_labels_and_description.sql
crates/api-db/src/: bmc_metadata.rs  desired_firmware.rs  dpa_interface.rs  dpa_interface_state_history.rs  dpu_machine_update.rs  dpu_remediation.rs  expected_machine.rs  expected_power_shelf.rs  expected_switch.rs  host_machine_update.rs  instance.rs  instance_address.rs  lib.rs  machine.rs  machine_boot_override.rs  machine_health_history.rs  machine_interface.rs  machine_state_history.rs  machine_topology.rs  machine_validation.rs  network_devices.rs  network_segment.rs  nvl_logical_partition.rs  nvl_partition.rs  power_shelf.rs  power_shelf_state_history.rs  rack.rs  rack_state_history.rs  switch.rs  switch_state_history.rs  tenant_keyset.rs  vpc_peering.rs  (+1 more)
crates/api-model/: Cargo.toml
crates/dpf/: Cargo.toml  Makefile.toml
crates/dpf/src/: test.rs  utils.rs
crates/health/: Cargo.toml
crates/mqttea/: Cargo.toml
crates/mqttea/src/: errors.rs  lib.rs
crates/mqttea/src/auth/: mod.rs  oauth2_provider.rs  traits.rs
crates/mqttea/src/client/: core.rs
crates/mqttea/tests/: auth.rs  client.rs  mod.rs  traits.rs
crates/rpc/: build.rs
crates/ssh-console-mock-api-server/: build.rs
(+292 files in other folders)
