[package]
name = "carbide-dpf"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "carbide_dpf"

[dependencies]
kube = { default-features = false, features = [
  "runtime",
  "derive",
  "client",
  "rustls-tls",
], workspace = true }
rustls = { workspace = true }
k8s-openapi = { features = ["latest", "schemars"], workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tera = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
uuid = { features = ["v4"], workspace = true }
async-trait = { workspace = true }

carbide-uuid = { path = "../uuid", features = ["sqlx"] }

[dev-dependencies]
tower-test = { workspace = true }
hyper = { features = ["client", "http1"], workspace = true }
http = { workspace = true }
once_cell = { workspace = true }

[lints]
workspace = true
