[package]
name = "mqttea"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "mqttea"
path = "src/lib.rs"

[dependencies]
tokio = { features = ["full"], workspace = true }
rumqttc = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { features = ["derive"], workspace = true }
clap = { features = ["derive"], workspace = true }
tracing-subscriber = { workspace = true }
chrono = { features = ["serde"], workspace = true }
regex = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# OAuth2 support
oauth2 = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
prost-build = { workspace = true }
tokio-test = { workspace = true }

[build-dependencies]
prost-build = "0.14"
